--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
 <body>
     
     <h1 id="header">Zufallszahlen-Generator</h1>
-    <p id="info">Kein Würfel dabei ? Easy ... benutze einfach meine kleines Würfel-App, 
+    <p id="info">Kein Würfel dabei ? Easy ... benutze einfach mein kleines Würfel-App, 
         das Zahlen zwischen 1 - 6 ausgibt. <br> Viel Glück !</p>
 
     <section class="grid-container">
